[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/dialogue_tree_creator/Assets/MagnifyingGlass.png" type="Texture" id=1]
[ext_resource path="res://addons/dialogue_tree_creator/EditorGUI/DialogueTreeEditor/NodeWidgets/NodeScriptConfigRoot.gd" type="Script" id=2]
[ext_resource path="res://addons/dialogue_tree_creator/EditorGUI/DialogueTreeEditor/NodeWidgets/MethodSelector.gd" type="Script" id=3]
[ext_resource path="res://addons/dialogue_tree_creator/Assets/minusSign.png" type="Texture" id=4]

[node name="NodeScriptConfigRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 50 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 136.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 160.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 6.0
margin_right = 78.0
margin_bottom = 20.0
text = "Node Script:"

[node name="SetPath" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 82.0
margin_right = 107.0
margin_bottom = 26.0
texture_normal = ExtResource( 1 )

[node name="SearchPath" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 111.0
margin_right = 136.0
margin_bottom = 26.0
texture_normal = ExtResource( 1 )

[node name="MinusButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 140.0
margin_right = 160.0
margin_bottom = 26.0
texture_normal = ExtResource( 4 )

[node name="Params" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 160.0
margin_bottom = 30.0

[node name="PathSearcher" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 36.0
margin_top = 21.0
margin_right = -36.0
margin_bottom = -21.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a File"
resizable = true
mode = 0

[node name="MethodSelector" type="ConfirmationDialog" parent="."]
margin_right = 419.0
margin_bottom = 370.0
rect_min_size = Vector2( 400, 140 )
window_title = "Select Method"
resizable = true
dialog_hide_on_ok = false
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MethodSelector"]
anchor_right = 1.0
anchor_bottom = 0.762
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 52.06
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MethodSelector/VBoxContainer"]
margin_right = 403.0
margin_bottom = 14.0
text = "Search:"

[node name="SearchBar" type="LineEdit" parent="MethodSelector/VBoxContainer"]
margin_top = 18.0
margin_right = 403.0
margin_bottom = 42.0

[node name="MatchesLabel" type="Label" parent="MethodSelector/VBoxContainer"]
margin_top = 46.0
margin_right = 403.0
margin_bottom = 60.0
text = "Matches:"

[node name="Matches" type="ItemList" parent="MethodSelector/VBoxContainer"]
margin_top = 64.0
margin_right = 403.0
margin_bottom = 234.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="MethodSelector/VBoxContainer"]
margin_top = 238.0
margin_right = 403.0
margin_bottom = 252.0
text = "Description:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="TextEdit" parent="MethodSelector/VBoxContainer"]
margin_top = 256.0
margin_right = 403.0
margin_bottom = 326.0
rect_min_size = Vector2( 0, 70 )
readonly = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SetPath" to="." method="_on_SetPath_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SearchPath" to="." method="_on_SearchPath_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MinusButton" to="." method="_on_MinusButton_pressed"]
[connection signal="file_selected" from="PathSearcher" to="." method="_on_PathSearcher_file_selected"]
[connection signal="confirmed" from="MethodSelector" to="MethodSelector" method="_on_MethodSelector_confirmed"]
[connection signal="method_selected" from="MethodSelector" to="." method="_on_MethodSelector_method_selected"]
[connection signal="visibility_changed" from="MethodSelector" to="MethodSelector" method="_on_MethodSelector_visibility_changed"]
[connection signal="text_changed" from="MethodSelector/VBoxContainer/SearchBar" to="MethodSelector" method="_on_SearchBar_text_changed"]
[connection signal="item_activated" from="MethodSelector/VBoxContainer/Matches" to="MethodSelector" method="_on_Matches_item_activated"]
[connection signal="item_selected" from="MethodSelector/VBoxContainer/Matches" to="MethodSelector" method="_on_Matches_item_selected"]
